--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,11 @@ ul.todo-list li {
     padding: 15px 15px 17px 15px;
 }
 
+.todo.checked {
+    color: #b2bec3;
+    text-decoration: line-through;
+}
+
 .remove {
     background-color: transparent;
     border: none;
